--- a/ClearMine/Themes/Common.xaml
+++ b/ClearMine/Themes/Common.xaml
@@ -1,12 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:ClearMine.UI.Controls"
                     xmlns:con="clr-namespace:ClearMine.UI.Converters"
                     xmlns:logic="clr-namespace:ClearMine.Logic;assembly=ClearMine.Logic">
-    <con:MathOperationConverter x:Key="MathOperationConverter" />
+    <MathOperationConverter x:Key="MathOperationConverter" />
     <con:PlaygroundBorderThicknessConverter x:Key="PlaygroundBorderThicknessConverter" />
     <DataTemplate DataType="{x:Type logic:MineCell}">
-        <local:MineCellControl />
+        <MineCellControl />
     </DataTemplate>
 
     <ControlTemplate x:Key="ValidationErrorTemplate">
