--- a/ClearMine/UI/Dialogs/StatisticsWindow.xaml
+++ b/ClearMine/UI/Dialogs/StatisticsWindow.xaml
@@ -78,6 +78,19 @@
                         <Setter Property="TextTrimming" Value="CharacterEllipsis" />
                     </Style>
                 </ListView.Resources>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="{x:Type ListViewItem}"
+                           BasedOn="{StaticResource {x:Static GridView.GridViewItemContainerStyleKey}}">
+                        <Setter Property="ToolTip">
+                            <Setter.Value>
+                                <ToolTip>
+                                    <Image Source="{Binding ScreenShootUri}"
+                                           Margin="7" Stretch="UniformToFill" />
+                                </ToolTip>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ListView.ItemContainerStyle>
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="Score" Width="50"
