1. Implement first version of OutputWindow. 2. Put screen shoot to user profile location application data folder.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@78 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/UI/Dialogs/StatisticsWindow.xaml
+++ b/ClearMine/UI/Dialogs/StatisticsWindow.xaml
@@ -83,7 +83,7 @@
                            BasedOn="{StaticResource {x:Static GridView.GridViewItemContainerStyleKey}}">
                         <Setter Property="ToolTip">
                             <Setter.Value>
-                                <ToolTip>
+                                <ToolTip MaxHeight="175" MaxWidth="175">
                                     <Image Source="{Binding ScreenShootUri}"
                                            Margin="7" Stretch="UniformToFill" />
                                 </ToolTip>
