--- a/ClearMine.Framework/Themes/Generic.xaml
+++ b/ClearMine.Framework/Themes/Generic.xaml
@@ -118,4 +118,17 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style TargetType="{x:Type con:NumberPresenter}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type con:NumberPresenter}">
+                    <Border Background="{TemplateBinding Background}"
+                            BorderBrush="{TemplateBinding BorderBrush}"
+                            BorderThickness="{TemplateBinding BorderThickness}">
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
