--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -22,6 +22,7 @@
         <x:Static Member="vm:ClearMineViewModel.FeedbackBinding" />
         <x:Static Member="vm:ClearMineViewModel.SaveAsBinding" />
         <x:Static Member="vm:ClearMineViewModel.OpenBinding" />
+        <x:Static Member="vm:ClearMineViewModel.ShowLogBinding" />
     </Window.CommandBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top">
