Create XP style number presenter control.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@79 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -69,6 +69,7 @@
             </MenuItem>
         </Menu>
         <Border Margin="5"
+                UseLayoutRounding="True"
                 BorderBrush="{DynamicResource PlaygroundBorderBrush}"
                 DockPanel.Dock="Top">
             <Border.BorderThickness>
@@ -81,14 +82,13 @@
             </Border.BorderThickness>
             <DockPanel LastChildFill="False"
                        Margin="0,5"
+                       MaxHeight="46"
                        HorizontalAlignment="Center">
-                <TextBlock Text="{Binding Time}"
-                           Margin="0,0,18,0" />
+                <ElectronicNumber DisplayNumber="{Binding Time}" />
                 <Button Content="_New Game"
                         Command="New"
-                        Margin="0,0,18,0" />
-                <TextBlock Text="{Binding RemainedMines}"
-                           DockPanel.Dock="Right" />
+                        Margin="18,0,18,0" />
+                <ElectronicNumber DisplayNumber="{Binding RemainedMines}" />
             </DockPanel>
         </Border>
         <Decorator x:Name="playground">
