--- a/ClearMine.Framework/Themes/Generic.xaml
+++ b/ClearMine.Framework/Themes/Generic.xaml
@@ -1,7 +1,9 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:ClearMine.Framework.Dialogs"
-                    xmlns:con="clr-namespace:ClearMine.Framework.Controls">
+                    xmlns:con="clr-namespace:ClearMine.Framework.Controls"
+                    xmlns:c="clr-namespace:ClearMine.Framework.Converters">
+    <c:LightUpsToBooleanConverter x:Key="LightUpsToBooleanConverter" />
     <Style TargetType="{x:Type local:OptionDialog}"
            BasedOn="{StaticResource {x:Type Window}}">
         <!-- Setting the WindowStartupLocation causing an ArgumentNullException in WPF -->
@@ -118,14 +120,88 @@
             </Setter.Value>
         </Setter>
     </Style>
+    
+    <DrawingBrush x:Key="DardRedTileBrush"
+                  TileMode="Tile"
+                  Viewport="0,0 2,2"
+                  ViewportUnits="Absolute">
+        <DrawingBrush.Drawing>
+            <GeometryDrawing Brush="#FF800000" Geometry="M0,0 L1,0 1,1 2,1 2,2 1,2 1,1 0,1Z" />
+        </DrawingBrush.Drawing>
+    </DrawingBrush>
+    
+    <Style x:Key="NumberStrokeStyle"
+           TargetType="{x:Type Path}">
+        <Setter Property="Fill"
+                Value="{StaticResource DardRedTileBrush}" />
+        <Setter Property="Stretch"
+                Value="UniformToFill" />
+        <Style.Triggers>
+            <DataTrigger Value="True">
+                <DataTrigger.Binding>
+                    <MultiBinding Converter="{StaticResource LightUpsToBooleanConverter}">
+                        <Binding Path="LightUpStrokes" RelativeSource="{RelativeSource TemplatedParent}" />
+                        <Binding Path="DataContext" RelativeSource="{RelativeSource Self}" Mode="OneTime" />
+                    </MultiBinding>
+                </DataTrigger.Binding>
+                <Setter Property="Fill" Value="Red" />
+            </DataTrigger>
+        </Style.Triggers>
+    </Style>
 
     <Style TargetType="{x:Type con:NumberPresenter}">
+        <Setter Property="Background"
+                Value="Black" />
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type con:NumberPresenter}">
+                    <Grid Background="{TemplateBinding Background}">
+                        <Path DataContext="{x:Static con:LightUps.Top}"
+                              Style="{StaticResource NumberStrokeStyle}"
+                              Data="M-1,-1 L12,22 M1,0 L1,1 2,1 2,2 3,2 3,3 8,3 8,2 9,2 9,1 10,1 10,0Z" />
+                        <Path DataContext="{x:Static con:LightUps.TopL}"
+                              Style="{StaticResource NumberStrokeStyle}"
+                              Data="M-1,-1 L12,22 M0,1 L1,1 1,2 2,2 2,3 3,3 3,8 2,8 2,9 1,9 1,10 0,10Z" />
+                        <Path DataContext="{x:Static con:LightUps.TopR}"
+                              Style="{StaticResource NumberStrokeStyle}"
+                              Data="M-1,-1 L12,22 M11,1 L10,1 10,2 9,2 9,3 8,3 8,8 9,8 9,9 10,9 10,10 11,10Z" />
+                        <Path DataContext="{x:Static con:LightUps.Middle}"
+                              Style="{StaticResource NumberStrokeStyle}"
+                              Data="M-1,-1 L12,22 M1,10 L2,10 2,9 9,9 9,10 10,10 10,11 9,11 9,12 2,12 2,11 1,11Z" />
+                        <Path DataContext="{x:Static con:LightUps.BottomL}"
+                              Style="{StaticResource NumberStrokeStyle}"
+                              Data="M-1,-1 L12,22 M0,11 L1,11 1,12 2,12 2,13 3,13 3,18 2,18 2,19 1,19 1,20 0,20Z" />
+                        <Path DataContext="{x:Static con:LightUps.BottomR}"
+                              Style="{StaticResource NumberStrokeStyle}"
+                              Data="M-1,-1 L12,22 M11,11 L10,11 10,12 9,12 9,13 8,13 8,18 9,18 9,19 10,19 10,20 11,20Z" />
+                        <Path DataContext="{x:Static con:LightUps.Bottom}"
+                              Style="{StaticResource NumberStrokeStyle}"
+                              Data="M-1,-1 L12,22 M1,21 L1,20 2,20 2,19 3,19 3,18 8,18 8,19 9,19 9,20 10,20 10,21Z" />
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style TargetType="{x:Type con:ElectronicNumber}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type con:ElectronicNumber}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}">
+                        <ItemsControl ItemsSource="{TemplateBinding Numbers}">
+                            <ItemsControl.ItemTemplate>
+                                <DataTemplate>
+                                    <con:NumberPresenter Number="{Binding Number}" />
+                                </DataTemplate>
+                            </ItemsControl.ItemTemplate>
+                            <ItemsControl.ItemsPanel>
+                                <ItemsPanelTemplate>
+                                    <StackPanel Orientation="Horizontal" />
+                                </ItemsPanelTemplate>
+                            </ItemsControl.ItemsPanel>
+                        </ItemsControl>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
