--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -1,4 +1,5 @@
-﻿<Window x:Class="ClearMine.UI.Dialogs.ClearMineWindow" x:ClassModifier="internal"
+﻿<Window x:Class="ClearMine.UI.Dialogs.ClearMineWindow"
+        x:ClassModifier="internal"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:c="clr-namespace:ClearMine.UI.Converters"
@@ -24,8 +25,22 @@
         <x:Static Member="vm:ClearMineViewModel.OpenBinding" />
         <x:Static Member="vm:ClearMineViewModel.ShowLogBinding" />
     </Window.CommandBindings>
-    <DockPanel>
-        <Menu DockPanel.Dock="Top">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto" />
+            <RowDefinition Height="0.2*" />
+            <RowDefinition Height="*"
+                           MinHeight="23" />
+            <RowDefinition Height="0.2*" />
+            <RowDefinition Height="7*" />
+            <RowDefinition Height="0.2*" />
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="5" />
+            <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="5" />
+        </Grid.ColumnDefinitions>
+        <Menu Grid.ColumnSpan="3">
             <MenuItem Header="Game">
                 <MenuItem Header="New Game"
                           Command="New" />
@@ -62,38 +77,30 @@
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem Header="Send Feedback"
-                          Command="{x:Static vm:ClearMineViewModel.Feedback}"/>
+                          Command="{x:Static vm:ClearMineViewModel.Feedback}" />
                 <Separator />
                 <MenuItem Header="About"
-                          Command="{x:Static vm:ClearMineViewModel.About}"/>
+                          Command="{x:Static vm:ClearMineViewModel.About}" />
             </MenuItem>
         </Menu>
-        <Border Margin="5"
-                UseLayoutRounding="True"
-                BorderBrush="{DynamicResource PlaygroundBorderBrush}"
-                DockPanel.Dock="Top">
-            <Border.BorderThickness>
-                <MultiBinding Converter="{StaticResource PlaygroundBorderThicknessConverter}"
-                              ConverterParameter="0.2">
-                    <Binding Path="ActualWidth"
-                             ElementName="playground" />
-                    <Binding Path="Columns" />
-                </MultiBinding>
-            </Border.BorderThickness>
-            <DockPanel LastChildFill="False"
-                       Margin="0,5"
-                       MaxHeight="46"
-                       HorizontalAlignment="Center">
-                <ElectronicNumber DisplayNumber="{Binding Time}" />
-                <Button Content="_New Game"
-                        Command="New"
-                        Margin="18,0,18,0" />
-                <ElectronicNumber DisplayNumber="{Binding RemainedMines}" />
-            </DockPanel>
-        </Border>
-        <Decorator x:Name="playground">
-            <Border Margin="5"
-                    BorderBrush="{DynamicResource PlaygroundBorderBrush}"
+        <DockPanel LastChildFill="False"
+                   Grid.Row="2"
+                   Grid.ColumnSpan="3"
+                   HorizontalAlignment="Center"
+                   UseLayoutRounding="True">
+            <ElectronicNumber DisplayNumber="{Binding Time}" />
+            <Button Command="New"
+                    Margin="18,0,18,0"
+                    Style="{StaticResource NewGameButtonStyle}">
+                <Border x:Name="newGameIcon"
+                        Background="{Binding NewGameIcon}" />
+            </Button>
+            <ElectronicNumber DisplayNumber="{Binding RemainedMines}" />
+        </DockPanel>
+        <Decorator x:Name="playground"
+                   Grid.Row="4"
+                   Grid.Column="1">
+            <Border BorderBrush="{DynamicResource PlaygroundBorderBrush}"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center">
                 <Border.BorderThickness>
@@ -119,5 +126,5 @@
                 </ItemsControl>
             </Border>
         </Decorator>
-    </DockPanel>
+    </Grid>
 </Window>
