--- a/ClearMine/App.xaml
+++ b/ClearMine/App.xaml
@@ -5,8 +5,9 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/ClearMine.Themes;component/Themes/Generic.xaml" />
                 <ResourceDictionary Source="Themes\Common.xaml" />
-                <ResourceDictionary Source="Themes\DefaultSkin.xaml" />
+                <ResourceDictionary Source="/ClearMine.Themes;component/Themes/luna.normalcolor.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
