Make the timer precise to 100ms.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@82 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine/UI/Dialogs/ClearMineWindow.xaml
+++ b/ClearMine/UI/Dialogs/ClearMineWindow.xaml
@@ -78,7 +78,8 @@
                    Grid.ColumnSpan="3"
                    HorizontalAlignment="Center"
                    UseLayoutRounding="True">
-            <ElectronicNumber DisplayNumber="{Binding Time}" />
+            <ElectronicNumber LengthAfterPoint="1"
+                              DisplayNumber="{Binding Time}" />
             <Button Command="New"
                     Margin="18,0,18,0"
                     Style="{StaticResource NewGameButtonStyle}">
