--- a/ClearMine.Framework/Themes/Generic.xaml
+++ b/ClearMine.Framework/Themes/Generic.xaml
@@ -181,6 +181,21 @@
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsFloatingPoint" Value="True">
+                <Setter Property="Template">
+                    <Setter.Value>
+                        <ControlTemplate TargetType="{x:Type con:NumberPresenter}">
+                            <Border Background="{TemplateBinding Background}">
+                                <Path Data="M-1,-1 L3,22 M0,19 L0,17 2,17 2,19Z"
+                                      Fill="Red"
+                                      Stretch="UniformToFill" />
+                            </Border>
+                        </ControlTemplate>
+                    </Setter.Value>
+                </Setter>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 
     <Style TargetType="{x:Type con:ElectronicNumber}">
@@ -193,7 +208,8 @@
                         <ItemsControl ItemsSource="{TemplateBinding Numbers}">
                             <ItemsControl.ItemTemplate>
                                 <DataTemplate>
-                                    <con:NumberPresenter Number="{Binding Number}" />
+                                    <con:NumberPresenter Number="{Binding Number}"
+                                                         IsFloatingPoint="{Binding IsPoint}" />
                                 </DataTemplate>
                             </ItemsControl.ItemTemplate>
                             <ItemsControl.ItemsPanel>
