Refactoring: Use MEF to modularize ClearMine.Logic.dll.
git-svn-id: http://hugogu/svn/main/Workspace/Projects/TechnicalResearch/WPF/ClearMine@83 abc3d51d-b5e4-b64c-aea7-7d3d034b83e7

--- a/ClearMine.Dialogs/StatisticsWindow.xaml
+++ b/ClearMine.Dialogs/StatisticsWindow.xaml
@@ -93,7 +93,7 @@
                     <GridView>
                         <GridViewColumn Header="Score" Width="50"
                                         b:SortableListViewBehavior.SortField="Score"
-                                        DisplayMemberBinding="{Binding Score}" />
+                                        DisplayMemberBinding="{Binding Score, StringFormat=0.00}" />
                         <GridViewColumn Header="Date" Width="160"
                                         b:SortableListViewBehavior.SortField="Date"
                                         DisplayMemberBinding="{Binding Date}" />
